issue of loader done

--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -42,7 +42,7 @@
                                     </a>
                                 </div>
                                 <div class="col-9 p-0">
-                                    <span class="text-white"> Hello Rao Info Tech </span>
+                                    <span class="text-white"> Hello{{userName}} </span>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                     </a>
                                 </div>
                                 <div class="col-9 p-0">
-                                    <span class="text-white"> Hello Rao Info Tech </span>
+                                    <span class="text-white"> Hello {{userName}} </span>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                     </a>
                                 </div>
                                 <div class="col-9 p-0">
-                                    <span class="text-white"> Hello Rao Info Tech </span>
+                                    <span class="text-white"> Hello {{userName}} </span>
                                 </div>
                             </div>
                         </div>
