--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -130,3 +130,67 @@
         </div>
     </section>
 </div>
+
+
+
+<div class="new_event_slide ten_slide" step>
+    <div class="event_inner_content_box">
+        <div class="event_inner_content ">
+            <div class="new_event_sec">
+                <div class="row">
+                    <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                        <a><img src="/assets/images/10icon.png"></a>
+                        <p class="text-white">New Event</p>
+                    </div>
+                    <div class="col-9 p-0">
+                        <span class="text-white event_name"> Hello {{userName}} </span>
+                    </div>
+                </div>
+            </div>
+            <div class="event_bank_detail">
+                <div class="event_hashtag text-center">
+                    <p># Event Hashtag</p>
+                </div>
+                <div class="sliding" style="overflow:auto; height: 300px;">
+                    <div class="row bank_slider">
+                        <div class="col-11 ">
+                            <div class="slider1" *ngFor="let details of bankDetails">
+                                <div class="slide1" >
+                                    <div class=slider_radio_btn>
+                                        <input type="radio" id="second" value="{{details._id}}" name="radio-group">
+                                        <label for="second"></label>
+                                    </div>
+                                    <div class="slider_box1" >
+                                        <p>Bank name: {{details.bankName}}<br> Account number: {{details.accountNumber}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-1 p-0">
+                            <div class="plus_add">
+                                <a class="text-white" data-toggle="modal"
+                                    data-target="#exampleModal">
+                                    <img src="/assets/images/plus.png"> </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="check">
+                    <label class="container">Instant transfer to my account
+                        <input type="checkbox" name="checkButton" id="box1" >
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="container">Franster on 05-08-2019 to my account (this option saves
+
+                        you on alert notifications)
+                        <input type="checkbox" name="checkButton" id="box2">
+                        <span class="checkmark"></span>
+                    </label>
+                </div>
+                <div class="addBank">
+                    <button class="btn" style="background-color:black" (click)="selectBank()"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
