--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -1,31 +1,31 @@
 <!-- Thank you message with normal form field -->
 
-<div class="container m-auto p-4">
+<!-- <div class="container m-auto p-4">
     <div class="row">
         <div class="col-6">
             <div class="card p-2">
-                <form [formGroup]= "thankyouMessageForm">
+                <form [formGroup]="thankyouMessageForm">
                     <div class="form-group">
                         <label for="comment">Message:</label>
-                        <textarea class="form-control"  formControlName="message"></textarea>
+                        <textarea class="form-control" formControlName="message"></textarea>
                     </div>
                     <div class="row mt-2">
-                            <div class="col-md-12">
-                                <h5>Upload Profile Photo</h5>
-                                <div class="custom-file">
-                                    <input type="file" #attachment formControlName="attachment" class="form-control"
-                                        (change)="addFile($event.target.files)" id="customFile"
-                                        accept="image/png, image/jpeg, image/jpg, image/gif" hidden>
-                                    <label class="custom-file-label" for="customFile">Choose file</label>
-                                </div>
+                        <div class="col-md-12">
+                            <h5>Upload Profile Photo</h5>
+                            <div class="custom-file">
+                                <input type="file" #attachment formControlName="attachment" class="form-control"
+                                    (change)="addFile($event.target.files)" id="customFile"
+                                    accept="image/png, image/jpeg, image/jpg, image/gif" hidden>
+                                <label class="custom-file-label" for="customFile">Choose file</label>
                             </div>
                         </div>
+                    </div>
                     <button type="button" class="btn btn-primary" (click)="thankyouMessage()">Submit</button>
                 </form>
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Thank you message with use of editor -->
 
@@ -41,3 +41,74 @@
     </div>
     <button type="button" class="btn btn-primary" (click)="thankyouMessage()">Submit</button>
 </form> -->
+
+
+<!-- New Design implemented -->
+<div class="step_one">
+<section class="thank_you_section  d-flex flex-wrap align-content-center">
+    <div class="container-fluid">
+        <h3 class="text-center">Aso Ebi</h3>
+        <div class="add_bank_account">
+            <div class="Join_inner_content_box">
+                <div class="event_inner_content">
+                    <div class="new_event_sec">
+                        <div class="row">
+                            <div class="col-3 m-auto pr-0 float-right">
+                                <a href="#"><img src="/assets/images/bank_icon.png"></a>
+                                <p class="text-white">New Event</p>
+                            </div>
+                            <div class="col-9 p-0">
+                                <span class="text-white event_name"> Hello Rao Info Tech </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form [formGroup]="thankyouMessageForm" autocomplete="off" class="join_form forgot_pwd_form mt-3">
+                    <div class="form-group">
+                        <!-- <label for="comment">Message:</label> -->
+                        <textarea class="form-control" formControlName="message"
+                            placeholder="Enter Thank you message"></textarea>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-md-12">
+                            <h5>Upload Profile Photo</h5>
+                            <div class="custom-file">
+                                <input type="file" #attachment formControlName="attachment" class="form-control"
+                                    (change)="addFile($event.target.files)" id="customFile"
+                                    accept="image/png, image/jpeg, image/jpg, image/gif" hidden>
+                                <label class="custom-file-label" for="customFile">Choose file</label>
+                            </div>
+                        </div>
+                    </div>
+                <div class="btn_submit_pwd">
+                    <button class="btn text-white text-center add_bank_btn submit_btn_pwd text-center"
+                        (click)="thankyouMessage()" [disabled]="isDisable">Submit</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
+
+
+<div class="step_two">
+        <section class="thanks_page_section text-center d-flex flex-wrap align-content-center">
+                <div class="container-fluid">
+                    <h3>Aso Ebi</h3>
+                    <div class="thanks_sec1">
+                        <div class="Join_inner_content_box">
+                            <div class="inner_content_btn">
+                                <!-- <img src="/assets/images/close.png" class="close_img"> -->
+                                <div class="thanks_head text-center">
+                                    <p>Thank you.</p>
+                                </div>
+                                <div class="thanks_slug text-center">
+                                    <p>Do check your messages for<br> further details</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+</div>
