--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -43,12 +43,27 @@
                     <div class="event_inner_content">
                         <div class="new_event_sec">
                             <div class="row">
-                                <div class="col-3 m-auto pr-0 float-right">
-                                    <a href="#"><img src="/assets/images/reset_pwd_icon.png"></a>
+                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a href="javascript:void(0)" class="closebtn"><img src="/assets/images/reset_pwd_icon.png"></a>
                                     <p class="text-white">Reset Password</p>
                                 </div>
                                 <div class="col-9 p-0">
                                     <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="overlay" class="new_event_menu_box" style="display: none;">
+                            <div class="">
+                                <div class="event_menu">
+                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                        <ul>
+                                            <li><a href="eventA.html" class="text-white new_event">My Event</a></li>
+                                            <li><a href="new_event_slider.html" class="text-white my_event">New Event</a></li>
+                                            <li><a href="add_bank_account.html" class="text-white my_account">bank account</a></li>
+                                            <li><a href="reset_password.html" class="text-white my_account">Reset Password</a></li>
+                                            <li><a href="#" class="text-white my_account">Logout</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -57,25 +72,25 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pwd3" placeholder="Current Password"
-                                    formControlName="currentPassword" name="pwd1">
+                                formControlName="currentPassword" name="pwd1">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <input type="password" class="form-control" id="pwd1" placeholder="New Password"
-                                    formControlName="newPassword" name="pwd1">
+                                formControlName="newPassword" name="pwd1">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <input type="password" class="form-control" formControlName="confirmPassword"
-                                    (input)="comparePassword(resetPasswordForm)" id="pwd2"
-                                    placeholder="Confirm New Password" name="pwd2">
+                                (input)="comparePassword(resetPasswordForm)" id="pwd2"
+                                placeholder="Confirm New Password" name="pwd2">
                             </div>
                         </div>
                         <div class="btn_submit_pwd">
                             <button class="btn text-white text-center reset_pwd_btn submit_btn_pwd text-center"
-                                (click)="resetPassword()" [disabled]="resetPasswordForm.invalid || isDisable">Submit</button>
+                            (click)="resetPassword()" [disabled]="resetPasswordForm.invalid || isDisable">Submit</button>
                         </div>
                     </form>
                 </div>
